--- a/app.json
+++ b/app.json
@@ -1,4 +1,5 @@
 {
+"logo":"https://github.com/NULLSM/Envil/blob/main/T8zjk-Zh_400x400.jpg",
   "env": {
     "reward_token": {
       "description": "A secret token for store reward!",
