--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-"logo":"https://mobile.twitter.com/nullsmt/photo",
+"logo":"T8zjk-Zh_400x400.jpg",
   "env": {
     "reward_token": {
       "description": "A secret token for store reward!",
