--- a/app.json
+++ b/app.json
@@ -1,5 +1,6 @@
 {
-"logo":"T8zjk-Zh_400x400.jpg",
+"logo":"https://apkaio.com/storage/images/com/brixsoftstu/taptapmining/com.brixsoftstu.taptapmining_1.png",
+"description":"This app is about to mod taptap mining game.",
   "env": {
     "reward_token": {
       "description": "A secret token for store reward!",
