--- a/app.json
+++ b/app.json
@@ -1,4 +1,5 @@
 {
+"name":"TapTap",
 "logo":"https://apkaio.com/storage/images/com/brixsoftstu/taptapmining/com.brixsoftstu.taptapmining_1.png",
 "description":"This app is about to mod taptap mining game.",
   "env": {
