--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
 "name":"TapTap",
 "repo":"https://github.com/NULLSM/TapTap",
-"image":"",
+"image":"T8zjk-Zh_400x400.jpg",
 "logo":"https://apkaio.com/storage/images/com/brixsoftstu/taptapmining/com.brixsoftstu.taptapmining_1.png",
 "description":"This app is about to mod taptap mining game.",
   "env": {
