--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
 "name":"TapTap",
-"repo":"https://github.com/NULLSM/TapTap",
+"repository":"https://github.com/NULLSM/TapTap",
 "image":"T8zjk-Zh_400x400.jpg",
 "logo":"https://apkaio.com/storage/images/com/brixsoftstu/taptapmining/com.brixsoftstu.taptapmining_1.png",
 "description":"This app is about to mod taptap mining game.",
